Added component för skala

--- a/skalan-frontend/src/app/app-nav/app-nav.component.html
+++ b/skalan-frontend/src/app/app-nav/app-nav.component.html
@@ -5,6 +5,7 @@
       [opened]="!(isHandset$ | async)">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
+      <a mat-list-item href="/skala">Skalan</a>
       <a mat-list-item href="/list">Bidrag</a>
     </mat-nav-list>
   </mat-sidenav>
