--- a/skalan-frontend/src/app/rating-card/rating-card.component.html
+++ b/skalan-frontend/src/app/rating-card/rating-card.component.html
@@ -1,6 +1,6 @@
 <mat-card class="card">
   <mat-card-header>
-    <app-grade mat-card-avatar></app-grade>
+    <app-grade [grade]="6" mat-card-avatar></app-grade>
     <mat-card-title>Pizza Calzone</mat-card-title>
     <mat-card-subtitle>Pizzeria Milano, Carlshem</mat-card-subtitle>
   </mat-card-header>
