Added imageUrl to Rating

--- a/skalan-frontend/src/app/rating-card/rating-card.component.html
+++ b/skalan-frontend/src/app/rating-card/rating-card.component.html
@@ -4,7 +4,7 @@
     <mat-card-title>{{rating.what}}</mat-card-title>
     <mat-card-subtitle>{{rating.where}}</mat-card-subtitle>
   </mat-card-header>
-  <img mat-card-image src="http://www.fnstatic.co.uk/images/content/recipe/calzone-pizza.jpg" alt="Pizza Calzone">
+  <img mat-card-image src="{{rating.imageUrl}}">
   <mat-card-content>
     <p>
       {{rating.motivation}}
