--- a/skalan-frontend/src/app/rating-card/rating-card.component.html
+++ b/skalan-frontend/src/app/rating-card/rating-card.component.html
@@ -11,6 +11,6 @@
     </p>
   </mat-card-content>
   <mat-card-footer class="footer">
-    <div>{{rating.user.userName}}</div>
+    <div>{{rating.user.username}}</div>
   </mat-card-footer>
 </mat-card>
