--- a/skalan-frontend/src/app/app-nav/app-nav.component.html
+++ b/skalan-frontend/src/app/app-nav/app-nav.component.html
@@ -7,8 +7,9 @@
     <mat-nav-list>
       <a mat-list-item routerLink="/skala">Skalan</a>
       <a mat-list-item routerLink="/list">Bidrag</a>
-      <a mat-list-item routerLink="/login">Logga in</a>
-      <a mat-list-item routerLink="/submission">Skicka in</a>
+      <a *ngIf="isLoggedIn" mat-list-item routerLink="/submission">Skicka in</a>
+      <a *ngIf="!isLoggedIn" mat-list-item routerLink="/login">Logga in</a>
+      <a *ngIf="isLoggedIn" mat-list-item (click)="logout()" routerLink="/skala">Logga ut</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
