--- a/skalan-frontend/src/app/login/login.component.scss
+++ b/skalan-frontend/src/app/login/login.component.scss
@@ -17,3 +17,10 @@
 .error {
   margin-top: 20px;
 }
+
+.row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
