Only allow images

--- a/skalan-frontend/src/app/components/submission/submission.component.html
+++ b/skalan-frontend/src/app/components/submission/submission.component.html
@@ -30,7 +30,7 @@
     </mat-form-field>
 
     <div class="field">
-      <input type="file" (change)="onFileChanged($event)">
+      <input type="file" accept="image/*" (change)="onFileChanged($event)">
     </div>
 
     <div class="row">
