--- a/skalan-frontend/src/app/components/skala/skala.component.html
+++ b/skalan-frontend/src/app/components/skala/skala.component.html
@@ -23,7 +23,7 @@
       <app-grade [grade]="3"></app-grade>
     </div>
     <div class="text">
-      <p>Dåligt, bör undivkas om alternativ finns.</p>
+      <p>Dåligt, bör undvikas om alternativ finns.</p>
     </div>
   </div>
 
@@ -59,7 +59,7 @@
       <app-grade [grade]="7"></app-grade>
     </div>
     <div class="text">
-      <p>Genomgående hög kvalité.</p>
+      <p>Genomgående hög kvalitet.</p>
     </div>
   </div>
 
